derive/tests/snapshots/scheduled_table/ReminderTimer/create_reminder_timer.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `reminder_timer` table.
    pub fn create_reminder_timer<'a>(
        &'a self,
        reminder_timer: CreateReminderTimer,
    ) -> Result<ReminderTimer, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let scheduled_id = u64::default();
        let scheduled_at = reminder_timer.scheduled_at;
        let reminder_timer = ReminderTimer {
            scheduled_id,
            scheduled_at,
        };
        let unique_column_values = (reminder_timer.scheduled_id.clone(),);
        match self.db().reminder_timer().try_insert(reminder_timer) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "reminder_timer".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ scheduled_id : {} }}", unique_column_values.0
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "reminder_timer".into(),
                        })
                    }
                }
            }
        }
    }
}
