derive/tests/snapshots/scheduled_table/ReminderTimer/get_all_reminder_timers.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `reminder_timer` table.
    pub fn get_all_reminder_timers<'a>(&'a self) -> impl Iterator<Item = ReminderTimer> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().reminder_timer().iter()
    }
}
