derive/tests/snapshots/scheduled_table/ReminderTimer/table.snap
---
source: derive/src/characterization_tests.rs
---
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct ReminderTimerScheduledId {
    value: u64,
}
impl Default for ReminderTimerScheduledId {
    fn default() -> ReminderTimerScheduledId {
        ReminderTimerScheduledId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for ReminderTimerScheduledId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "ReminderTimerScheduledId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for ReminderTimerScheduledId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&ReminderTimer> for ReminderTimerScheduledId {
    fn from(value: &ReminderTimer) -> Self {
        ReminderTimerScheduledId {
            value: value.scheduled_id.clone(),
        }
    }
}
impl From<&ReminderTimer> for Option<ReminderTimerScheduledId> {
    fn from(value: &ReminderTimer) -> Option<ReminderTimerScheduledId> {
        Some(ReminderTimerScheduledId {
            value: value.scheduled_id.clone(),
        })
    }
}
impl From<&ReminderTimerScheduledId> for Option<ReminderTimerScheduledId> {
    fn from(value: &ReminderTimerScheduledId) -> Option<ReminderTimerScheduledId> {
        use crate::spacetimedsl::Wrapper;
        Some(ReminderTimerScheduledId::new(value.value()))
    }
}
impl From<&ReminderTimerScheduledId> for ReminderTimerScheduledId {
    fn from(value: &ReminderTimerScheduledId) -> Self {
        use crate::spacetimedsl::Wrapper;
        ReminderTimerScheduledId::new(value.value())
    }
}
impl ReminderTimer {
    ///
    pub fn get_scheduled_id(&self) -> ReminderTimerScheduledId {
        use crate::spacetimedsl::Wrapper;
        ReminderTimerScheduledId::new(self.scheduled_id.clone())
    }
    ///
    pub fn get_scheduled_at(&self) -> &spacetimedb::ScheduleAt {
        use crate::spacetimedsl::Wrapper;
        &self.scheduled_at
    }
}
///
pub struct CreateReminderTimer {
    pub scheduled_at: spacetimedb::ScheduleAt,
}

// Generated DSL methods:
// count_of_all_reminder_timers
// create_reminder_timer
// delete_reminder_timer_by_scheduled_id
// get_all_reminder_timers
// get_reminder_timer_by_scheduled_id
